# nicoarch-worker

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  worker.py
src/: worker.py
src/connectors/: mongo.py  redis.py
