[tool.poetry]
name = "nicoarch-worker"
version = "0.1.0"
description = ""
authors = ["tksnnx <tkser.edu@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.8"
pymongo = "^4.8.0"
requests = "^2.32.3"
niconico-py = "^2.0.8"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
